0023258: Missing parenthesis

Missing parenthesis added.